--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,7 +14,11 @@ body {
 	padding: 5px;
 }
 
-.info textarea {
-    height: 100px;
+#info {
+    height: 150px;
     resize: none;
+}
+
+#warning {
+	display: none;
 }
